--- a/templates/allInfoUser.html
+++ b/templates/allInfoUser.html
@@ -2,9 +2,9 @@
   <thead>
     <tr>
        <th>User: {{jsonData[userID-1].id}}</th>
-       <th><input type="button" value="    Prev    "></th>
-       <th><input type="button" value="запрос post"></th>
-       <th><input type="button" value="запрос albums"></th>
+       <th><input type="button" class="btn" ui-sref="user" value="    Prev    "></th>
+       <th><input type="button" class="btn" ui-sref="post" value="запрос post"></th>
+       <th><input type="button" class="btn" ui-sref="album" value="запрос albums"></th>
     </tr>
   </thead>
   <tbody>
