--- a/templates/user.html
+++ b/templates/user.html
@@ -10,7 +10,7 @@
     <tr>
        <td>name:</td>
        <td>{{el.name}}</td>
-        <td rowspan="2"><input class="btn btn_allInfoUsers" ng-click="allInfoUsers($event, el.id)" type="button" value="Подробнее"></td>
+        <td rowspan="2"><input class="btn btn_allInfoUsers" ng-click="allInfoUsers($event, el.id)" ui-sref="users" type="button" value="Подробнее"></td>
     </tr>
     <tr>
        <td>username:</td>
@@ -20,7 +20,7 @@
     <tr>
        <td>email:</td>
        <td>{{el.email}}</td>
-	   <td rowspan="2"><input type="button" value="запрос post"></td>
+	     <td rowspan="2"><input type="button" class="btn" ui-sref="post" ng-click="posts($event, el.id)" value="запрос post"></td>
     </tr>
     <tr>
        <td>phone:</td>
@@ -30,12 +30,11 @@
     <tr>
        <td>website:</td>
        <td>{{el.website}}</td>
-       <td rowspan="2"><input type="button" value="запрос albums"></td>
+       <td rowspan="2"><input type="button" class="btn" ui-sref="album" value="запрос albums"></td>
     </tr>
     <tr>
        <td>company Name:</td>
        <td>{{el.company.name}}</td>
-
     </tr>
   </tbody>
 </table>
