--- a/templates/album.html
+++ b/templates/album.html
@@ -1,3 +1,48 @@
+<div class="wrapper" >
+  <div class="row">
+    <div class="col-sm-6 col-md-12 " >
+      <div class="thumbnail">
+        <div class="caption" >
+          <h3><strong>{{userName}}</strong></h3>
+        </div>
+      </div>
+     <ul ng-repeat="el in jsonData">
+        <li>
+        <div class="thumbnail">
+          <div class="caption" >
+            <h5>{{el.title}}</h5>
+            <p>
+              <a href="#" class="btn btn-primary" ui-sref="photos({id: el.id})" role="button">Photos☺</a>
+            </p>
+          </div>
+        </div>
+        </li>
+      </ul>
+
+    </div>
+  </div>
+</div>
+
+<!-- <div class="wrapper" >
+<div>
+  <h3>name :{{userName}}</h3>
+</div>
+  <div class="row" ng-repeat="el in jsonData">
+    <div class="col-sm-6 col-md-12 " >
+      <div class="thumbnail">
+        <div class="caption" >
+              <ul >  
+                  <li><strong> title: </strong> {{el.title}} </li>
+              </ul>
+          <p>
+            <a href="#" class="btn btn-primary" ui-sref="photos({id: el.id})" role="button">Photos☺</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> -->
+<!-- 
 <table class="tableInfo" ng-repeat="el in jsonData">
   <thead>
     <tr>
@@ -15,8 +60,8 @@
        <td>{{el.title}}</td>
     </tr>
     <tr>
-       <td><a class='get_photo' ui-sref="photos" data-id="+el.id+" href='#'>Photos☺</a></td>
+       <td><a class='get_photo' ui-sref="photos({id: el.id})" href='#'>Photos☺</a></td>
        <td></td>
     </tr>
   </tbody>
-</table>
+</table> -->
