--- a/templates/post.html
+++ b/templates/post.html
@@ -1,26 +1,26 @@
-<table class="tableInfo" ng-repeat="el in jsonData">
-  <thead>
-    <tr>
-       <th>User: {{el.userId}}</th>
-       <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-       <td>id:</td>
-       <td>{{el.id}}</td>
-    </tr>
-    <tr>
-       <td>title:</td>
-       <td>{{el.title}}</td>
-    </tr>
-    <tr>
-       <td>body:</td>
-       <td>{{el.body}}</td>
-    </tr>
-    <tr>
-       <td><a class='get_comments' ui-sref="comments" data-id="+el.id+" href='#'>Comments☺</a></td>
-       <td></td>
-    </tr>
-  </tbody>
-</table>
+<div class="wrapper" >
+  <div class="row">
+    <div class="col-sm-6 col-md-12 " >
+      <div class="thumbnail">
+        <div class="caption" >
+          <h3>{{post.title}}</h3>
+          <p>{{post.body}}</p>
+        </div>
+      </div>
+      
+      <h4>Comments</h4>
+      
+      <ul ng-repeat="comment in comments">
+        <li>
+        <div class="thumbnail">
+          <div class="caption" >
+            <h5>{{comment.name}}</h5>
+            <p>{{comment.body}}</p>
+          </div>
+        </div>
+        </li>
+      </ul>
+
+    </div>
+  </div>
+</div>
