--- a/templates/photos.html
+++ b/templates/photos.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
-  <div class="row" >
-    <div class="col-sm-10 col-md-4 " ng-repeat="photo in photos" >
+  <div class="row " >
+    <div class="col-sm-10 col-md-4 photosHeight"  ng-repeat="photo in photos"  >
       <div class="thumbnail">
       <img src="{{photo.thumbnailUrl}}" alt="">
         <div class="caption" >
