--- a/templates/users.html
+++ b/templates/users.html
@@ -1,4 +1,8 @@
 <div class="wrapper">
+
+  <div>
+      <img ng-if="loader" src="gif/loader.gif" alt="">
+  </div>
   <ul>
     <li><a ui-sref="allPosts()">All Posts</a></li>
   </ul>
