--- a/templates/users.html
+++ b/templates/users.html
@@ -1,8 +1,9 @@
 <div class="wrapper">
+<!-- <span us-spinner="{radius:30, width:8, length: 16}"></span> -->
 
-  <div>
-      <img ng-if="loader" src="gif/loader.gif" alt="">
-  </div>
+<!-- <div class="loader" ng-show="loader">
+  <div class="loader-content">Loading...</div>
+</div> -->
   <ul>
     <li><a ui-sref="allPosts()">All Posts</a></li>
   </ul>
