--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,23 @@ font-size: 12px;
 .photosHeight {
     height: 300px;
 }
+
+.loader {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        z-index: 9;
+    }
+
+    .loader-content {
+        width: 128px;
+        height: 128px;
+        overflow: auto;
+        margin: auto;
+        position: absolute;
+        z-index: 10;
+        top: 0; left: 0; bottom: 0; right: 0;
+    }
 /*
 @gray-dark {
     background-color:#454545;
