--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,12 +1,15 @@
 
 <div class="wrapper" >
+
+  <!-- <loading></loading> -->
+
   <!-- <h2>{{userName}}</h2> -->
   <div class="row" ng-repeat="post in posts">
     <div class="col-sm-6 col-md-12 " >
       <div class="thumbnail">
         <div class="caption" >
           <h3>{{post.title}}</h3>
-              <ul >  
+              <ul >
                   <li><strong> body: </strong>  {{post.body}} </span></li>
               </ul>
           <p>
@@ -21,7 +24,7 @@
 </div>
 
 
-<!-- 
+<!--
 <table class="tableInfo" ng-repeat="el in jsonData">
   <thead>
     <tr>
