--- a/templates/testGetPhotos.html
+++ b/templates/testGetPhotos.html
@@ -14,7 +14,7 @@
   </div>
   <p>
     <a href="#" class="btn btn-primary" ng-click="getData($event)" role="button">
-      Подгрузить еще
+      more...
     </a>
   </p>
 </div>
